--- a/TODO.txt
+++ b/TODO.txt
@@ -2,8 +2,7 @@
 * output format for evaluation pipeline
 * parameter for only ouput or full dict incl. mode, original data etc.
 * save function (via ensure_format and datasetdict.save_to_disk...)
-* synthpop
 * syntheval
 * other backends?
 * how to handle datasetdicts?
-* should dataset be the default?
+* should dataset be the default output?
