--- a/test.ipynb
+++ b/test.ipynb
@@ -40,6 +40,16 @@
    "id": "1c2c4b68-375e-4eea-a5e8-983f10dbcecc",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "pipeline(\"evaluate\", target_col=\"is_cancer\")(pipeline(\"generate\")(pipeline(\"train\", plugin=\"bayesian_network\")(\"mstz/breast\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9082029-b0fa-46aa-b127-77ecaf933be7",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
