testing count option

--- a/test.ipynb
+++ b/test.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline(\"evaluate\", target_col=\"is_cancer\")(pipeline(\"generate\")(pipeline(\"train\", plugin=\"bayesian_network\")(\"mstz/breast\")))"
+    "pipeline(\"evaluate\", target_col=\"is_cancer\")(pipeline(\"generate\", count=10000)(pipeline(\"train\", plugin=\"bayesian_network\")(\"mstz/breast\")))"
    ]
   },
   {
