--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,11 @@
 * save_pretrained and from_pretrained for statedicts
+* split pipeline
+* wait for syntheval to fix target_col==None and update package afterwards
+* use benchmark module from syntheval?
+* make sure count can be given for metapipeline "synthesize" (currently multiple values for keyword)
+* save data also to xlsx etc.
 * R synthpop as backends
+-- old - check if still applicable
 * output class for all pipelines with optional return_dict = True
 * standardized list of supported metrics (supported by any backend)
 * standardized list of supported generation methods (supported by any backend)
