updated test notebook

--- a/test.ipynb
+++ b/test.ipynb
@@ -11,7 +11,30 @@
    "source": [
     "import sys\n",
     "!{sys.executable} -m pip install --upgrade .\n",
-    "from synthesizers import pipeline"
+    "from synthesizers import Load, pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c6f4773-f3fa-4374-aab8-4d7120a20b01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Load(\"mstz/breast\").Synthesize(split_size=0.8, gen_count=1000, eval_target_col=\"is_cancer\", save_name=\"breast.xlsx\", save_key=\"synth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65e69aed-1806-4410-b83d-e0da92ecb5f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from synthesizers import Load\n",
+    "state = Load(\"breast.xlsx\").Split(size=0.2).Train(plugin=\"tvae\")\n",
+    "for count in (100, 1000, 10000, 100000):\n",
+    "    state.Generate(count=count).Save(name=f\"breast-{count}.csv\")"
    ]
   },
   {
@@ -43,14 +66,6 @@
    "source": [
     "pipeline(\"evaluate\", target_col=\"is_cancer\")(pipeline(\"generate\", count=10000)(pipeline(\"train\", plugin=\"bayesian_network\")(\"mstz/breast\")))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9082029-b0fa-46aa-b127-77ecaf933be7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
