--- a/examples/test-synthesizers.ipynb
+++ b/examples/test-synthesizers.ipynb
@@ -34,7 +34,7 @@
     "from synthesizers import Load\n",
     "state = Load(\"breast.xlsx\").Split(size=0.2).Train(plugin=\"tvae\")\n",
     "for count in (100, 1000, 10000, 100000):\n",
-    "    state.Generate(count=count).Save(name=f\"breast-{count}.csv\")"
+    "    state.Generate(count=count).Save(name=f\"breast-{count}.csv\", key=\"synth\")"
    ]
   },
   {
