multi as default

--- a/examples/synthesizers.ipynb
+++ b/examples/synthesizers.ipynb
@@ -10,7 +10,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install --upgrade .\n",
+    "!{sys.executable} -m pip install --upgrade ..\n",
     "from synthesizers import Load, pipeline"
    ]
   },
