fixed some bugs

--- a/examples/synthesizers.ipynb
+++ b/examples/synthesizers.ipynb
@@ -27,6 +27,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0115adc1-1a4d-4ae4-afbe-5700776c233a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Load(\"mstz/breast\").Synthesize(split_size=[0.8, 0.9], train_plugin=[\"ctgan\", \"adsgan\"], gen_count=[1000, 10000], eval_target_col=\"is_cancer\", save_name=\"breast_multiple\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "791d35cb-7112-4e7c-a435-ae68d5c10622",
    "metadata": {},
    "outputs": [],
@@ -106,7 +116,7 @@
     "s2 = Load(\"julien-c/titanic-survival\").Split()\n",
     "train = pipeline(\"train\", plugin=\"ctgan\")\n",
     "train(s1).Generate(count=1000).Save(name=\"breast.jsonl\", key=\"synth\")\n",
-    "train(s2).Generate(count=1000).Save(name=\"titanic.jsonl\", key=\"synth\")\n"
+    "train(s2).Generate(count=1000).Save(name=\"titanic.jsonl\", key=\"synth\")"
    ]
   }
  ],
