minor update to example

--- a/examples/synthesizers.ipynb
+++ b/examples/synthesizers.ipynb
@@ -27,11 +27,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "71c33de5-a5c6-4ffb-a647-5621667edf8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Load(\"mstz/breast\").Synthesize(split_size=[0.8, 0.9], gen_count=[1000, 10000], eval_target_col=\"is_cancer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0115adc1-1a4d-4ae4-afbe-5700776c233a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Load(\"mstz/breast\").Synthesize(split_size=[0.8, 0.9], train_plugin=[\"ctgan\", \"adsgan\"], gen_count=[1000, 10000], eval_target_col=\"is_cancer\", save_name=\"breast_multiple\")"
+    "Load(\"mstz/breast\").Synthesize(split_size=[0.8, 0.9], train_plugin=[\"adsgan\", \"ctgan\"], gen_count=[1000, 10000], eval_target_col=\"is_cancer\", save_name=\"breast_multiple\")"
    ]
   },
   {
