--- a/examples/synthesizers.ipynb
+++ b/examples/synthesizers.ipynb
@@ -10,7 +10,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install --upgrade .\n",
+    "!{sys.executable} -m pip install --upgrade ..\n",
     "from synthesizers import Load, pipeline"
    ]
   },
@@ -21,7 +21,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Load(\"mstz/breast\").Synthesize(split_size=0.8, gen_count=1000, eval_target_col=\"is_cancer\", save_name=\"breast.xlsx\", save_key=\"synth\")"
+    "Load(\"mstz/breast\").Synthesize(split_size=0.8, gen_count=100, eval_target_col=\"is_cancer\", save_name=\"breast.xlsx\", save_key=\"synth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71c33de5-a5c6-4ffb-a647-5621667edf8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Load(\"mstz/breast\").Synthesize(split_size=[0.8, 0.9], gen_count=[1000, 10000], eval_target_col=\"is_cancer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0115adc1-1a4d-4ae4-afbe-5700776c233a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Load(\"mstz/breast\").Synthesize(split_size=[0.8, 0.9], train_plugin=[\"adsgan\", \"ctgan\"], gen_count=[1000, 10000], eval_target_col=\"is_cancer\", save_name=\"breast_multiple\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "791d35cb-7112-4e7c-a435-ae68d5c10622",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from synthesizers import Load\n",
+    "state = Load(\"breast.xlsx\").Split(size=0.2).Train(plugin=\"tvae\").Generate(count=[100, 1000, 10000, 100000]).Save(name=f\"breast.csv\", key=\"synth\")"
    ]
   },
   {
@@ -65,6 +96,37 @@
    "outputs": [],
    "source": [
     "pipeline(\"evaluate\", target_col=\"is_cancer\")(pipeline(\"generate\", count=10000)(pipeline(\"train\", plugin=\"bayesian_network\")(\"mstz/breast\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb148e77-fa04-4b0e-a15d-ed92759eaacf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from README.md\n",
+    "from synthesizers import Load\n",
+    "Load(\"mstz/breast\").Synthesize(split_size=0.8, gen_count=10000, eval_target_col=\"is_cancer\", save_name=\"breast.xlsx\", save_key=\"synth\")\n",
+    "Load(\"mstz/breast\").Split(size=0.8).Train().Generate(count=10000).Evaluate(target_col=\"is_cancer\").Save(name=\"breast.xlsx\", key=\"synth\")\n",
+    "state = Load(\"mstz/breast\").Split(size=0.8).Train()\n",
+    "for count in (100, 1000, 10000, 100000):\n",
+    "    state.Generate(count=count).Save(name=f\"breast-{count}.csv\", key=\"synth\")\n",
+    "state = Load(\"mstz/breast\").Split(size=0.8).Train().Save(\"breast_state\")\n",
+    "Load(\"breast_state\").Generate(count=10000).Save(name=\"breast.csv\", key=\"synth\")\n",
+    "Load(\"breast_state\").Generate(count=[1000,100000]).Save(name=\"breast_1000.csv\", index=0, key=\"synth\").Save(name=\"breast_100000.csv\", index=1, key=\"synth\")\n",
+    "from synthesizers import pipeline\n",
+    "pipeline(\"synthesize\", split_size=0.8, gen_count=10000, eval_target_col=\"is_cancer\", save_name=\"breast.json\", save_key=\"synth\")(\"mstz/breast\")\n",
+    "state = pipeline(\"split\", size=0.8)(\"mstz/breast\")\n",
+    "state = pipeline(\"train\")(state)\n",
+    "state = pipeline(\"generate\", count=10000)(state)\n",
+    "state = pipeline(\"evaluate\", target_col=\"is_cancer\")\n",
+    "state = pipeline(\"identity\", save_name=\"breast.json\", save_key=\"synth\")\n",
+    "s1 = Load(\"mstz/breast\").Split()\n",
+    "s2 = Load(\"julien-c/titanic-survival\").Split()\n",
+    "train = pipeline(\"train\", plugin=\"ctgan\")\n",
+    "train(s1).Generate(count=1000).Save(name=\"breast.jsonl\", key=\"synth\")\n",
+    "train(s2).Generate(count=1000).Save(name=\"titanic.jsonl\", key=\"synth\")"
    ]
   }
  ],
