Update cell output and PEP 8 compliance to notebooks.

--- a/examples/tutorial1_local_data.ipynb
+++ b/examples/tutorial1_local_data.ipynb
@@ -19,25 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hyrup/.local/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[KeOps] Warning : Cuda libraries were not detected on the system or could not be loaded ; using cpu only mode\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from synthesizers import Load"
    ]
@@ -57,51 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2024-04-23T07:37:33.649238+0200][8961][CRITICAL] module disabled: /home/hyrup/miniconda3/envs/synth/lib/python3.10/site-packages/synthcity/plugins/generic/plugin_goggle.py\n",
-      "/home/hyrup/miniconda3/envs/synth/lib/python3.10/site-packages/sklearn/metrics/cluster/_supervised.py:66: UserWarning: Clustering metrics expects discrete values but received binary values for label, and continuous values for target\n",
-      "  warnings.warn(msg, UserWarning)\n",
-      "/home/hyrup/miniconda3/envs/synth/lib/python3.10/site-packages/sklearn/metrics/cluster/_supervised.py:66: UserWarning: Clustering metrics expects discrete values but received multiclass values for label, and continuous values for target\n",
-      "  warnings.warn(msg, UserWarning)\n",
-      "/home/hyrup/miniconda3/envs/synth/lib/python3.10/site-packages/sklearn/metrics/cluster/_supervised.py:66: UserWarning: Clustering metrics expects discrete values but received multiclass values for label, and continuous values for target\n",
-      "  warnings.warn(msg, UserWarning)\n",
-      "/home/hyrup/miniconda3/envs/synth/lib/python3.10/site-packages/sklearn/metrics/cluster/_supervised.py:66: UserWarning: Clustering metrics expects discrete values but received multiclass values for label, and continuous values for target\n",
-      "  warnings.warn(msg, UserWarning)\n",
-      "/home/hyrup/miniconda3/envs/synth/lib/python3.10/site-packages/sklearn/metrics/cluster/_supervised.py:66: UserWarning: Clustering metrics expects discrete values but received binary values for label, and continuous values for target\n",
-      "  warnings.warn(msg, UserWarning)\n",
-      "/home/hyrup/miniconda3/envs/synth/lib/python3.10/site-packages/sklearn/metrics/cluster/_supervised.py:66: UserWarning: Clustering metrics expects discrete values but received multiclass values for label, and continuous values for target\n",
-      "  warnings.warn(msg, UserWarning)\n",
-      "/home/hyrup/miniconda3/envs/synth/lib/python3.10/site-packages/sklearn/metrics/cluster/_supervised.py:66: UserWarning: Clustering metrics expects discrete values but received multiclass values for label, and continuous values for target\n",
-      "  warnings.warn(msg, UserWarning)\n",
-      "/home/hyrup/miniconda3/envs/synth/lib/python3.10/site-packages/sklearn/metrics/cluster/_supervised.py:66: UserWarning: Clustering metrics expects discrete values but received multiclass values for label, and continuous values for target\n",
-      "  warnings.warn(msg, UserWarning)\n",
-      "/home/hyrup/miniconda3/envs/synth/lib/python3.10/site-packages/sklearn/metrics/cluster/_supervised.py:66: UserWarning: Clustering metrics expects discrete values but received continuous values for label, and multiclass values for target\n",
-      "  warnings.warn(msg, UserWarning)\n",
-      "/home/hyrup/miniconda3/envs/synth/lib/python3.10/site-packages/sklearn/metrics/cluster/_supervised.py:66: UserWarning: Clustering metrics expects discrete values but received multiclass values for label, and continuous values for target\n",
-      "  warnings.warn(msg, UserWarning)\n",
-      "/home/hyrup/miniconda3/envs/synth/lib/python3.10/site-packages/sklearn/metrics/cluster/_supervised.py:66: UserWarning: Clustering metrics expects discrete values but received continuous values for label, and multiclass values for target\n",
-      "  warnings.warn(msg, UserWarning)\n",
-      "04/23/2024 07:37:34:WARNING:Probability values don't exactly sum to 1. Differ by: -2.220446049250313e-16. Adjusting values.\n",
-      "04/23/2024 07:37:35:WARNING:Probability values don't exactly sum to 1. Differ by: -2.220446049250313e-16. Adjusting values.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: Principal component analysis did not run, too few nummerical attributes!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# state = Load(r\"data/Wine_Quality_Data.csv\").Synthesize(split_size=0.8, train_plugin=\"bayesian_network\", gen_count=1e4, eval_target_col=\"color\", save_name=\"synthetic_wine.xlsx\", save_key=\"synth\")\n",
-    "state = Load(r\"data/titanic.csv\").Synthesize(split_size=0.8, train_plugin=\"bayesian_network\", gen_count=1e4, eval_target_col=\"has_survived\", save_name=\"synthetic_titanic.xlsx\", save_key=\"synth\")"
+    "state = Load(r\"data/titanic.csv\").Synthesize(\n",
+    "    split_size=0.8,\n",
+    "    train_plugin=\"bayesian_network\",\n",
+    "    gen_count=1e4,\n",
+    "    eval_target_col=\"has_survived\",\n",
+    "    save_name=\"synthetic_titanic.xlsx\",\n",
+    "    save_key=\"synth\",\n",
+    ")"
    ]
   },
   {
